Fixed bug #36812 (pg_execute() modifies input array).